--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -1285,9 +1285,7 @@
 
 &lt;button class=&quot;button&quot; type=&quot;button&quot;&gt;Normal&lt;/button&gt;
 
-&lt;button class=&quot;button button--large&quot; type=&quot;button&quot;&gt;Large&lt;/button&gt;
-
-&lt;button class=&quot;button button--huge&quot; type=&quot;button&quot;&gt;Huge&lt;/button&gt;</code></pre>
+&lt;button class=&quot;button button--large&quot; type=&quot;button&quot;&gt;Large&lt;/button&gt;</code></pre>
                 </div>
                 <div class="example container">
                     <button class="button button--block" type="button">Block</button>
@@ -1559,10 +1557,6 @@
                             <input class="input--large" type="text" id="large-input" placeholder="Type something...">
                         </div>
                         <div class="field">
-                            <label for="huge-input">Huge Input</label>
-                            <input class="input--huge" type="text" id="huge-input" placeholder="Type something...">
-                        </div>
-                        <div class="field">
                             <label for="pill-input">Pill Input</label>
                             <input class="input--pill" type="text" id="pill-input" placeholder="Type something...">
                         </div>
@@ -1580,8 +1574,6 @@
                     <pre><code>&lt;input class=&quot;input--small&quot; type=&quot;text&quot; id=&quot;small-input&quot; placeholder=&quot;&quot;&gt;
 
 &lt;input class=&quot;input--large&quot; type=&quot;text&quot; id=&quot;large-input&quot; placeholder=&quot;&quot;&gt;
-
-&lt;input class=&quot;input--huge&quot; type=&quot;text&quot; id=&quot;huge-input&quot; placeholder=&quot;&quot;&gt;
 
 &lt;input class=&quot;input--pill&quot; type=&quot;text&quot; id=&quot;pill-input&quot; placeholder=&quot;&quot;&gt;
 
@@ -2095,49 +2087,49 @@
                 <ul class="grid example-icons u-flex-bottom">
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
-                            <svg class="icon icon--small">
+                            <svg class="icon icon--sm">
                                 <use xlink:href="../images/icons.svg#mark"></use>
                             </svg>
                         </div>
-                        <code>.icon icon--small</code>
+                        <code>.icon icon--sm</code>
                     </li>
 
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
-                            <svg class="icon icon--medium">
+                            <svg class="icon icon--md">
                                 <use xlink:href="../images/icons.svg#mark"></use>
                             </svg>
                         </div>
-                        <code>.icon icon--medium</code>
+                        <code>.icon icon--md</code>
                     </li>
 
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
-                            <svg class="icon icon--large">
+                            <svg class="icon icon--lg">
                                 <use xlink:href="../images/icons.svg#mark"></use>
                             </svg>
                         </div>
-                        <code>.icon icon--large</code>
+                        <code>.icon icon--lg</code>
                     </li>
 
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
-                            <svg class="icon icon--huge">
+                            <svg class="icon icon--xl">
                                 <use xlink:href="../images/icons.svg#mark"></use>
                             </svg>
                         </div>
-                        <code>.icon icon--huge</code>
+                        <code>.icon icon--xl</code>
                     </li>
                 </ul>
 
                 <ul class="grid example-icons u-flex-bottom">
                     <li class="grid__column u-width-xs-6of12 u-width-sm-4of12 u-width-md-auto u-text-center">
                         <div class="example-icon">
-                            <svg class="icon icon--align-to-text">
+                            <svg class="icon icon--aligned">
                                 <use xlink:href="../images/icons.svg#mark"></use>
-                            </svg> Icon align to text
+                            </svg> Icon aligned to text
                         </div>
-                        <code>.icon icon--align-to-text</code>
+                        <code>.icon icon--aligned</code>
                     </li>
                 </ul>
             </article>
