--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -97,6 +97,11 @@
             min-height: 2rem;
         }
 
+        .docs-content .example-column.example-column--darker {
+            background: #e6e6e6;
+
+        }
+
         .docs-content .example-column .example-column {
             background: #ffffff;
         }
@@ -351,28 +356,28 @@
                     <div class="container">
                         <div class="grid grid--equal-height">
                             <div class="grid__column u-width-x-small-6of12"><span class="example-column">
-                            <div class="grid">
-                            <div class="grid__column u-width-x-small-6of12"><span class="example-column"></span></div>
-                            <div class="grid__column u-width-x-small-6of12"><span class="example-column"></span></div>
+                                    <div class="grid">
+                                        <div class="grid__column u-width-x-small-6of12"><span class="example-column"></span></div>
+                                        <div class="grid__column u-width-x-small-6of12"><span class="example-column"></span></div>
 
-                            <div class="grid__column u-width-x-small-6of12"><span class="example-column"></span></div>
-                            <div class="grid__column u-width-x-small-6of12"><span class="example-column"></span></div>
+                                        <div class="grid__column u-width-x-small-6of12"><span class="example-column"></span></div>
+                                        <div class="grid__column u-width-x-small-6of12"><span class="example-column"></span></div>
+                                    </div>
+                                </span>
+                            </div>
+                            <div class="grid__column u-width-x-small-6of12"><span class="example-column">
+                                    <div class="grid">
+                                        <div class="grid__column u-width-x-small-4of12"><span class="example-column"></span></div>
+                                        <div class="grid__column u-width-x-small-8of12"><span class="example-column"></span></div>
+                                        <div class="grid__column u-width-x-small-4of12"><span class="example-column"></span></div>
+                                        <div class="grid__column u-width-x-small-8of12"><span class="example-column"></span></div>
+                                        <div class="grid__column u-width-x-small-4of12"><span class="example-column"></span></div>
+                                        <div class="grid__column u-width-x-small-8of12"><span class="example-column"></span></div>
+                                    </div>
+                                </span>
+                            </div>
                         </div>
-                        </span>
                     </div>
-                    <div class="grid__column u-width-x-small-6of12"><span class="example-column">
-                            <div class="grid">
-                                <div class="grid__column u-width-x-small-4of12"><span class="example-column"></span></div>
-                    <div class="grid__column u-width-x-small-8of12"><span class="example-column"></span></div>
-                    <div class="grid__column u-width-x-small-4of12"><span class="example-column"></span></div>
-                    <div class="grid__column u-width-x-small-8of12"><span class="example-column"></span></div>
-                    <div class="grid__column u-width-x-small-4of12"><span class="example-column"></span></div>
-                    <div class="grid__column u-width-x-small-8of12"><span class="example-column"></span></div>
-                </div>
-                </span>
-                </div>
-                </div>
-                </div>
                 </div>
                 <div class="example container">
                     <pre><code>&lt;div class=&quot;grid&quot;&gt;
@@ -396,18 +401,24 @@
                 </header>
                 <div class="example">
                     <div class="container">
-                        <div class="grid grid--half">
+                        <div class="grid">
+                            <div class="grid__column u-width-x-small-auto"><span class="example-column example-column--darker"></span></div>
                             <div class="grid__column u-width-x-small-auto"><span class="example-column"></span></div>
+                        </div>
+                        <div class="grid grid--half">
+                            <div class="grid__column u-width-x-small-auto"><span class="example-column example-column--darker"></span></div>
                             <div class="grid__column u-width-x-small-auto"><span class="example-column"></span></div>
                         </div>
                         <div class="grid grid--flush">
-                            <div class="grid__column u-width-x-small-auto"><span class="example-column"></span></div>
+                            <div class="grid__column u-width-x-small-auto"><span class="example-column example-column--darker"></span></div>
                             <div class="grid__column u-width-x-small-auto"><span class="example-column"></span></div>
                         </div>
                     </div>
                 </div>
                 <div class="example container">
-                    <pre><code>&lt;div class=&quot;grid grid--half&quot;&gt;...&lt;/div&gt;
+                    <pre><code>&lt;div class=&quot;grid&quot;&gt;...&lt;/div&gt;
+
+&lt;div class=&quot;grid grid--half&quot;&gt;...&lt;/div&gt;
 
 &lt;div class=&quot;grid grid--flush&quot;&gt;...&lt;/div&gt;</code></pre>
                 </div>
@@ -420,35 +431,35 @@
                         <div class="grid grid--equal-height">
                             <div class="grid__column u-width-medium-auto">
                                 <span class="example-column">
-                            <div class="example-well example-well--borderless">One Morning, When Gregor Samsa Woke. From troubled dreams, he found himself transformed in his bed into a horrible vermin.</div>
-                        </span>
+                                    <div class="example-well example-well--borderless">One Morning, When Gregor Samsa Woke. From troubled dreams, he found himself transformed in his bed into a horrible vermin.</div>
+                                </span>
                             </div>
                             <div class="grid__column u-width-medium-auto">
                                 <span class="example-column">
-                            <div class="grid">
-                                    <div class="grid__column u-width-medium-auto">
-                                        <span class="example-column"></span>
+                                    <div class="grid">
+                                        <div class="grid__column u-width-medium-auto">
+                                            <span class="example-column"></span>
+                                        </div>
+                                        <div class="grid__column u-width-medium-auto">
+                                            <span class="example-column"></span>
+                                        </div>
+                                    </div>
+                                    <div class="grid">
+
+                                        <div class="grid__column u-width-large-auto">
+                                            <span class="example-column"></span>
+                                        </div>
+                                        <div class="grid__column u-width-large-auto">
+                                            <span class="example-column"></span>
+                                        </div>
+                                    </div>
+                                </span>
                             </div>
                             <div class="grid__column u-width-medium-auto">
                                 <span class="example-column"></span>
                             </div>
                         </div>
-                        <div class="grid">
-
-                            <div class="grid__column u-width-large-auto">
-                                <span class="example-column"></span>
-                            </div>
-                            <div class="grid__column u-width-large-auto">
-                                <span class="example-column"></span>
-                            </div>
-                        </div>
-                        </span>
                     </div>
-                    <div class="grid__column u-width-medium-auto">
-                        <span class="example-column"></span>
-                    </div>
-                </div>
-                </div>
                 </div>
                 <div class="example container">
                     <pre><code>&lt;div class=&quot;grid grid--equal-height&quot;&gt;...&lt;/div&gt;</code></pre>
@@ -558,24 +569,6 @@
                                     <td><span>Hidden</span>
                                     </td>
                                     <td><span class="u-color-success">Visible</span>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td><code>.u-hide-x-small-up</code>
-                                    </td>
-                                    <td><span>Hidden</span>
-                                    </td>
-                                    <td><span>Hidden</span>
-                                    </td>
-                                    <td>
-                                        <span>Hidden</span>
-                                    </td>
-                                    <td>
-                                        <span>Hidden</span>
-                                    </td>
-                                    <td>
-                                        <span>Hidden</span>
                                     </td>
                                 </tr>
                                 <tr>
@@ -1936,22 +1929,22 @@
                         <div class="grid__column u-width-medium-6of12 u-width-x-large-auto">
                             <div class="example">
                                 <button role="button" class="button">Button <span class="tag">Tag</span></button>
-                                <br/>
-                                <br/>
+                                <br />
+                                <br />
                                 <a href="#">Inside anchor <span class="tag">Tag</span></a>
-                                <br/>
-                                <br/>
+                                <br />
+                                <br />
                                 <h1 class="u-remove-margin">Header <span class="tag">Tag</span></h1>
                             </div>
                         </div>
                         <div class="grid__column u-width-medium-6of12 u-width-x-large-auto">
                             <div class="example">
                                 <button role="button" class="button">Button <span class="badge">21</span></button>
-                                <br/>
-                                <br/>
+                                <br />
+                                <br />
                                 <a href="#">Inside anchor <span class="badge">21</span></a>
-                                <br/>
-                                <br/>
+                                <br />
+                                <br />
                                 <h1 class="u-remove-margin">Header <span class="badge">21</span></h1>
                             </div>
                         </div>
@@ -2856,7 +2849,9 @@
     </main>
 
     <footer class="docs-footer" role="contentinfo">
-        <small>Hand-crafted with <svg class="icon icon--small icon--aligned"><use xlink:href="#svg-heart"></use></svg> by <a href="http://www.rae.fi">RAE</a><br />© 2017</small>
+        <small>Hand-crafted with <svg class="icon icon--small icon--aligned">
+                <use xlink:href="#svg-heart"></use>
+            </svg> by <a href="http://www.rae.fi">RAE</a><br />© 2017</small>
     </footer>
 
     <!-- Styleguide JS -->
