add more utility font-weights

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,22 @@
     </header>
 
     <main id="main" class="main" role="main">
+        <section class="hero">
+            <div class="hero__top">Header</div>
+            <div class="hero__image">
+                <div class="media media--background">
+                    <img src="http://placehold.it/1600x900" />
+                </div>
+            </div>
+            <div class="hero__content">
+                <div class="container-fluid">
+                    <div class="content" style="background: pink;">Content</div>
+                </div>
+            </div>
+
+
+            <div class="hero__bottom">Footer</div>
+        </section>
 
     </main>
 
@@ -78,11 +94,6 @@
     <script src="scripts/vendor.min.js"></script>
     <script src="scripts/main.min.js"></script>
     <!-- @endif -->
-
-    <script>
-        $('.js-nav').navResponsive();
-
-    </script>
 
     <!-- @include partials/analytics.html -->
 </body>
