--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 <body>
     <!-- @include partials/browserhappy.html -->
 
-    <header id="header" class="header" role="banner">
+    <header id="site-header" class="site-header" role="banner">
         <div class="logo">
             <a href="/">
                 <img src="images/logo.svg" alt="Logo" style="height: 40px;">
@@ -62,7 +62,7 @@
 
     </header>
 
-    <main id="main" class="main" role="main">
+    <main id="site-main" class="site-main" role="main">
         <section class="hero">
             <div class="hero__top">Header</div>
             <div class="hero__image">
@@ -82,7 +82,7 @@
 
     </main>
 
-    <footer id="footer" class="footer" role="contentinfo">
+    <footer id="site-footer" class="site-footer" role="contentinfo">
     </footer>
 
 
