--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,13 @@
         </div>
 
         <nav class="nav nav--primary js-nav" data-navigation role="navigation">
-            <ul class="nav__list" data-content>
+            <ul class="nav__menu" data-nav-content>
                 <li class="nav__item">
                     <a href="styleguide/index.html" class="nav__link">Visual Style Guide &amp; Documentation</a>
                 </li>
                 <li class="nav__item">
                     <a href="http://www.rae.fi" class="nav__link">RAE Framework</a>
-                    <ul class="nav__list nav__list--subnav">
+                    <ul class="nav__submenu">
                         <li class="nav__item"><a href="http://www.rae.fi" class="nav__link">Just a subnav</a>
                         </li>
                         <li class="nav__item"><a href="http://www.rae.fi" class="nav__link">Just a subnav</a>
