--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,13 @@
     <link rel="stylesheet" href="styles/style.min.css">
     <!-- @endif -->
 
-    <!-- @include partials/meta.html -->
-
-    <!-- @include partials/favicons.html -->
+    <!-- @include template-parts/utilities/meta.html -->
+    <!-- @include template-parts/utilities/favicons.html -->
 
 </head>
 
 <body>
-    <!-- @include partials/browserhappy.html -->
+    <!-- @include template-parts/utilities/browserhappy.html -->
 
     <header id="site-header" class="site-header" role="banner">
         <div class="logo">
@@ -95,8 +94,8 @@
     <script src="scripts/main.min.js"></script>
     <!-- @endif -->
 
-    <!-- @include partials/analytics.html -->
+    <!-- @include template-parts/utilities/analytics.html -->
 </body>
 
 </html>
-<!-- Built with love with RAE Framework -->
+<!-- Built with love by RAE -->
