--- a/src/index.html
+++ b/src/index.html
@@ -36,21 +36,21 @@
             </a>
         </div>
 
-        <nav class="nav nav--primary js-nav" data-navigation role="navigation">
-            <ul class="nav__menu" data-nav-content>
-                <li class="nav__item">
-                    <a href="styleguide/index.html" class="nav__link">Visual Style Guide &amp; Documentation</a>
+        <nav class="primary-nav js-primary-nav" data-navigation role="navigation" aria-label="Primary Navigation">
+            <ul class="primary-nav__menu" data-nav-content>
+                <li class="primary-nav__item">
+                    <a href="styleguide/index.html" class="primary-nav__link">Visual Style Guide &amp; Documentation</a>
                 </li>
-                <li class="nav__item">
-                    <a href="http://www.rae.fi" class="nav__link">RAE Framework</a>
-                    <ul class="nav__submenu">
-                        <li class="nav__item"><a href="http://www.rae.fi" class="nav__link">Just a subnav</a>
+                <li class="primary-nav__item">
+                    <a href="http://www.rae.fi" class="primary-nav__link">RAE Framework</a>
+                    <ul class="primary-nav__submenu">
+                        <li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just a subnav</a>
                         </li>
-                        <li class="nav__item"><a href="http://www.rae.fi" class="nav__link">Just a subnav</a>
-                            <ul class="nav__list nav__list--subnav">
-                                <li class="nav__item"><a href="http://www.rae.fi" class="nav__link">Just a subnav</a>
+                        <li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just a subnav</a>
+                            <ul class="primary-nav__list primary-nav__list--subnav">
+                                <li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just a subnav</a>
                                 </li>
-                                <li class="nav__item"><a href="http://www.rae.fi" class="nav__link">Just a subnav</a>
+                                <li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just a subnav</a>
                                 </li>
                             </ul>
                         </li>
