--- a/src/index.html
+++ b/src/index.html
@@ -64,22 +64,70 @@
 	</header>
 
 	<main id="site-main" class="site-main" role="main">
-		<section class="hero">
-			<div class="hero__top">Header</div>
-			<div class="hero__image">
-				<div class="media media--background">
-					<img src="http://placehold.it/1600x900" />
-				</div>
-			</div>
-			<div class="hero__content">
-				<div class="container-fluid">
-					<div class="content" style="background: pink;">Content</div>
-				</div>
-			</div>
 
-
-			<div class="hero__bottom">Footer</div>
+		<!-- Patterns -->
+		<section class="hero-front">
+			<div class="hero-front__image"></div>
+			<div class="hero-front__content-container">
+				<h1 class="hero-front__title"></h1>
+				<div class="hero-front__ingress"></div>
+				<div class="hero-front__buttons"></div>
+			</div>
 		</section>
+
+		<section class="hero">
+			<div class="hero__container">
+				<div class="hero__breadcrumb">
+					<div class="breadcrumb"></div>
+				</div>
+				<div class="hero__label"></div>
+				<h1 class="hero__title"></h1>
+				<div class="hero__row-wrap">
+					<h2 class="hero__subtitle"></h2>
+					<div class="hero__ingress">
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="hero__background"></div>
+		</section>
+
+		<section class="named-element">
+			<div class="named-element__container">
+				<div class="named-element__heading">
+					<div class="element-heading">
+						<div class="element-heading__label"></div>
+						<h2 class="element-heading__title"></h2>
+					</div>
+				</div>
+				<div class="named-element__items">
+					<div class="named-element__item">
+						<div class="new-block-item"></div>
+					</div>
+					<div class="named-element__item">
+						<div class="new-block-item"></div>
+					</div>
+					<div class="named-element__item">
+						<div class="new-block-item"></div>
+					</div>
+					<div class="named-element__item">
+						<div class="new-block-item"></div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="content-element content-element--align-content-right">
+			<div class="content-element__image"></div>
+			<div class="content-element__content-wrap content-element__content-wrap--bg-off-white">
+				<h2 class="content-element__title"><a href="#"></a></h2>
+				<div class="content-element__content">
+					<p></p>
+				</div>
+				<div class="content-element__button"></div>
+			</div>
+		</section>
+
 
 	</main>
 
@@ -100,4 +148,4 @@
 </body>
 
 </html>
-<!-- Built with love by RAE -->
+<!-- Built with love by RAE.fi -->
