--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if IE 9]> <html class="no-js lt-ie10 ie9"> <![endif]-->
-<!--[if gt IE 9]><!-->
 <html class="no-js">
-<!--<![endif]-->
 
 <head>
 	<title>RAE Framework</title>
@@ -34,25 +31,44 @@
 			</a>
 		</div>
 
-		<nav class="primary-nav js-primary-nav" data-navigation role="navigation" aria-label="Primary Navigation">
-			<ul class="primary-nav__menu" data-nav-content>
+		<nav class="primary-nav nav-responsive js-primary-nav" role="navigation" aria-label="Primary Navigation">
+			<ul class="primary-nav__menu">
 				<li class="primary-nav__item">
 					<a href="styleguide/index.html" class="primary-nav__link">Visual Style Guide &amp; Documentation</a>
 				</li>
 				<li class="primary-nav__item">
-					<a href="http://www.rae.fi" class="primary-nav__link">RAE Framework</a>
-					<ul class="primary-nav__submenu">
+					<a href="#" class="primary-nav__link">RAE Framework</a>
+					<ul class="primary-nav__submenu" id="Test1111">
 						<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just a
-								subnav</a>
+								subnav1</a>
 						</li>
 						<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just a
-								subnav</a>
+								subna2</a>
 							<ul class="primary-nav__list primary-nav__list--subnav">
 								<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just
-										a subnav</a>
+										a subnav3</a>
 								</li>
 								<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just
-										a subnav</a>
+										a subnav4</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li class="primary-nav__item">
+					<a href="#" class="primary-nav__link">Another Submenu</a>
+					<ul class="primary-nav__submenu">
+						<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just a
+								subnav5</a>
+						</li>
+						<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just a
+								subnav6</a>
+							<ul class="primary-nav__list primary-nav__list--subnav">
+								<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just
+										a subnav7</a>
+								</li>
+								<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just
+										a subnav8</a>
 								</li>
 							</ul>
 						</li>
@@ -60,7 +76,6 @@
 				</li>
 			</ul>
 		</nav>
-
 	</header>
 
 	<main id="site-main" class="site-main" role="main">
