simplifying nav-responsive css

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 						</li>
 						<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just a
 								subna2</a>
-							<ul class="primary-nav__list primary-nav__list--subnav">
+							<ul class="primary-nav__submenu">
 								<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just
 										a subnav3</a>
 								</li>
@@ -63,7 +63,7 @@
 						</li>
 						<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just a
 								subnav6</a>
-							<ul class="primary-nav__list primary-nav__list--subnav">
+							<ul class="primary-nav__submenu">
 								<li class="primary-nav__item"><a href="http://www.rae.fi" class="primary-nav__link">Just
 										a subnav7</a>
 								</li>
