move variables to styles root

--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -2182,7 +2182,15 @@
 					</li>
 				</ul>
 				<ul class="grid example-icons u-flex-bottom">
-					<li class="grid__column u-width-6of12 u-width-small-4of12 u-width-medium-auto u-text-center">
+					<li class="grid__column u-width-6of12 u-width-large-auto u-text-center">
+						<div class="example-icon">
+							<svg class="icon icon--x-small">
+								<use xlink:href="../images/icons.svg#mark"></use>
+							</svg>
+						</div>
+						<code>.icon icon--x-small</code>
+					</li>
+					<li class="grid__column u-width-6of12 u-width-large-auto u-text-center">
 						<div class="example-icon">
 							<svg class="icon icon--small">
 								<use xlink:href="../images/icons.svg#mark"></use>
@@ -2191,7 +2199,7 @@
 						<code>.icon icon--small</code>
 					</li>
 
-					<li class="grid__column u-width-6of12 u-width-small-4of12 u-width-medium-auto u-text-center">
+					<li class="grid__column u-width-6of12 u-width-large-auto u-text-center">
 						<div class="example-icon">
 							<svg class="icon icon--medium">
 								<use xlink:href="../images/icons.svg#mark"></use>
@@ -2200,7 +2208,7 @@
 						<code>.icon icon--medium</code>
 					</li>
 
-					<li class="grid__column u-width-6of12 u-width-small-4of12 u-width-medium-auto u-text-center">
+					<li class="grid__column u-width-6of12 u-width-large-auto u-text-center">
 						<div class="example-icon">
 							<svg class="icon icon--large">
 								<use xlink:href="../images/icons.svg#mark"></use>
@@ -2220,7 +2228,7 @@
 				</ul>
 
 				<ul class="grid example-icons u-flex-bottom">
-					<li class="grid__column u-width-6of12 u-width-small-4of12 u-width-medium-auto u-text-center">
+					<li class="grid__column u-width-6of12 u-width-large-auto ">
 						<div class="example-icon">
 							<svg class="icon icon--aligned">
 								<use xlink:href="../images/icons.svg#mark"></use>
