lead to ingress

--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -773,7 +773,7 @@
 					<h3 class="display-3">Paragraphs</h3>
 				</header>
 				<div class="example container">
-					<p class="lead">One Morning, When Gregor Samsa Woke. From troubled dreams, he found himself
+					<p class="ingress">One Morning, When Gregor Samsa Woke. From troubled dreams, he found himself
 						transformed in his bed into a horrible vermin. </p>
 					<p>He lay on his <strong>armour-like back</strong>, and if he lifted his head a little he could see
 						his brown belly, slightly domed and divided by <a href="#" title="an anchor">arches into stiff
@@ -785,7 +785,7 @@
 							small</small>, lay peacefully between its four familiar walls.</p>
 				</div>
 				<div class="example container">
-					<pre><code>&lt;p class=&quot;lead&quot;&gt;Lead paragraph&lt;/p&gt;
+					<pre><code>&lt;p class=&quot;ingress&quot;&gt;Ingress paragraph&lt;/p&gt;
 &lt;p&gt;Paragraph&lt;/p&gt;</code></pre>
 				</div>
 			</article>
